stopgaps / safari alt styles-- ver.2

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
 .mix-blend-mode-diff {
   background-color:rgb(75, 21, 21, 1);
   mix-blend-mode: luminosity;
+  transform: translateZ(0px);
 }
 
 .bg-z {
@@ -78,6 +79,7 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
 .tiers-stacks {
   display: flex;
   flex: 0 22%;
+  border-radius: 4px;
   margin: 30px;
   justify-content: center;
   background-color:moccasin;
@@ -85,12 +87,8 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
   transition: all 3s ease;
 }
 
-.hue-rotate {
-  filter: hue-rotate(45deg);
-}
-
 .bg-board {
-  background-color: #ebe5e5;
+  background-color: #ebe5e5 !important;
 }
 
 .offset-text {
@@ -159,13 +157,13 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
 
 @keyframes left-to-right {
   0% {
-    left: 25%;
+    left: -10%;
   }
   50% {
-    left: 70%;
+    left: 95%;
   }
   100% {
-    left: 25%;    
+    left: -10%;    
   }
 }
 
@@ -174,6 +172,7 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
   --outline: 3px solid #ffc011;
   outline: var(--outline);
   border: var(--outline);
+  border-radius: 4px;
   outline-offset: -2px;
   transition: outline-width 300ms ease, outline-offset 300ms ease;
   -webkit-transition: outline-width 300ms ease, outline-offset 300ms ease;
@@ -214,7 +213,7 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
   background-size: 33%;
   background-repeat: repeat;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color:#14141488;
   font-weight: bolder;
 }
 
@@ -243,6 +242,7 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
   --spillOutline: 6px solid #fcd874;
   outline: var(--spillOutline);
   border: var(--spillOutline);
+  border-radius: 0px !important;
   outline-offset: -2px;
   transition: outline-width 3000ms ease, outline-offset 3000ms ease;
 }
@@ -274,6 +274,10 @@ https://www.vectorstock.com/royalty-free-vector/halftone-background-vector-53132
   right: calc(var(--vw) * .01);
   flex: 0;
   z-index: 2;
+}
+
+.overlay {
+  mix-blend-mode: overlay;
 }
 
 .para-patron {
@@ -441,9 +445,9 @@ figure div span:nth-child(2) {
 
 /* https://codepen.io/alvarotrigo/pen/ExvqdNa */
 .fade-in {
-  opacity: 0;
+  opacity: .3;
   filter: blur(4px);
-  animation: fade-in 2s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  animation: fade-in 1.5s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
 
 @keyframes scale {
@@ -474,6 +478,10 @@ figure div span:nth-child(2) {
 
 .width-5 {
   width: 5vw;
+}
+
+.width-mid-p, .width-mid-d {
+  width: 1vw !important;
 }
 
 .width-10 {
@@ -593,7 +601,7 @@ img {
 
 .pop-out-l {
   opacity: 0;
-  transition: left 1.5s linear, opacity 1s linear;
+  transition: left 1s linear, opacity 1s linear;
 }
 
 .out-l {
@@ -604,7 +612,7 @@ img {
 
 .pop-out-r {
   opacity: 0;
-  transition: right 1.5s linear, opacity 1s linear;
+  transition: right 1s linear, opacity 1s linear;
 }
 
 .out-r {
@@ -654,6 +662,62 @@ img {
 
 .is-changing-2 {
   transform: rotateX(-90deg);
+}
+
+/* Safari 11+ */
+@media not all and (min-resolution:.001dpcm) { 
+  @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+    .mix-blend-mode-diff { 
+      background:rgba(98, 25, 25, 0.5);
+      background-blend-mode:difference;
+      mix-blend-mode: normal;
+    }
+
+    .offset-text {
+      mix-blend-mode: difference;
+      color: whitesmoke;
+      text-shadow:-3px 5px 15px #62191980;
+    }
+
+    .left-right .offset-text {
+      color:#cda5a5;
+    }
+    
+    .tiers-stacks {
+      background-color:#c1c1c1;
+    }
+    .transition-from, .transition-to {
+      --spillOutline: 6px solid #562222;
+    }
+   
+
+    @keyframes change-background {
+      0% {
+        background-color:rgb(52, 52, 52);
+      }
+      25% {
+        background-color:rgb(152, 152, 152);
+      }
+      50% {
+        background-color:rgb(222, 222, 222);
+      }
+      75% {
+        background-color:rgb(165, 165, 165);
+      }
+      100% {
+        background-color:rgb(52, 52, 52);
+      }
+    }
+
+    .start {
+      --outline: 3px solid #562222;
+    }
+    
+    .start:hover,
+    .start:focus {
+      box-shadow: 0px 0px 0px 1px #b05c5c inset;
+    }
+  }
 }
 
 /* MEDIA QUERIES */
@@ -706,8 +770,21 @@ img {
     background-size: 45%;
   }
 
+  @keyframes left-to-right {
+    0% {
+      left: 10%;
+    }
+    50% {
+      left: 75%;
+    }
+    100% {
+      left: 10%;    
+    }
+  }
+
   .left-right {
     z-index: 0;
+    margin-top: 20px;
   }
 
   .home-width {
@@ -721,7 +798,7 @@ img {
     right: calc(var(--vw) * .01);
   }
   .para-patron {
-    left: calc((var(--vw) * .01));
+    left: calc(var(--vw) * .01);
   }
 
   @keyframes flyInLeft {
@@ -752,10 +829,13 @@ img {
     margin-left: -25px !important;
   }
 
-  .mobile-hover {
-    outline: 4px solid rgba(129, 129, 129, 0.51);
-    outline-width: 12px;
-    outline-offset: -8px;
+  .width-mid-p {
+    width: 7vw !important;
+    margin-right: 80px;
+  }
+  .width-mid-d {
+    width: 7vw !important;
+    margin-left: 80px;
   }
 }
 
@@ -806,10 +886,6 @@ img {
       opacity: 1;
       right: 0; 
     }
-  }
-
-  .width-10 {
-    width: auto !important;
   }
 
   .card-container-d img, .card-container-p img {
